--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -64,7 +64,7 @@ body {
   font-weight: <weight>;
   font-style: normal;
   font-variation-settings:
-    "wdth" 100;
+    "width" 100;
 
   h1 { font-size: 2.986rem };
   h2 { font-size: 2.488rem };
@@ -88,7 +88,7 @@ header {
   padding-bottom: 10px;
 
   h1, h3 {
-    line-height: 0.5;
+    margin: 1rem;
   }
 
   h3 {
