--- a/src/pages/scanpdf.astro
+++ b/src/pages/scanpdf.astro
@@ -17,7 +17,6 @@ main#content {
   height: 600px;
 
   aside {
-    // overflow-y: overlay;
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -87,9 +86,9 @@ main#content {
         overflow-y: overlay;
         padding: 10px;
         gap: 1rem;
+        background-color: #333;
   
         .page {
-          border: 1px solid #333;
           display: flex;
           align-items: center;
           justify-content: center;
